tests/errors/non-entrypoint-external.futil
import "primitives/core.futil";
import "primitives/memories/comb.futil";

component foo() -> () {
  cells {
    @external r = std_reg(32);
  }
  wires {}
  control {}
}

component main() -> () {
  cells {
    f = foo();
  }
  wires {}
  control {}
}
