tests/errors/non-entrypoint-external.expect
---CODE---
1
---STDERR---
Error: tests/errors/non-entrypoint-external.futil
6 |    @external r = std_reg(32);
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^ Malformed Structure: Cell cannot be marked `@external` in non-entrypoint component
